1.7.4: Image cropping issue fixed.

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h1 {
 }
 #iconpng {
   width: 150px;
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
